EV-86 Checkout - Alignment issues

--- a/skin/frontend/enterprise/evisu/css/styles.css
+++ b/skin/frontend/enterprise/evisu/css/styles.css
@@ -7089,7 +7089,6 @@ p.required{
     padding: 35px 0;
 }
 #checkout-payment-method-load{
-    width: 470px;
     margin: 0 auto
 }
 #checkout-review-table{
